--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -7,7 +7,25 @@ html
     link(rel='stylesheet', href='/stylesheets/all.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+
+    nav.navbar.fixed-top.navbar-expand-md.navbar-dark.bg-dark
+      a.navbar-brand(href='/') Loc8r
+        button.navbar-toggler(type='button', data-toggle='collapse',data-target='#navbarMain')
+          span.navbar-toggler-icon
+      #navbarMain.navbar-collapse.collapse
+        ul.navbar-nav.mr-auto
+          li.nav-item
+            a.nav-link(href='/about/') About
+
+    .container.content
+      block content
+      
+
+      footer
+        .row
+          .col-12
+            small &copy; Summer Dev - Karl Lemfon 2018
+
     script(src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous")
     script(src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous")
     script(src='/javascripts/bootstrap.min.js')
