Oh boy, oh boy! Is templating in pug hard.

--- a/app_server/views/locations-list.pug
+++ b/app_server/views/locations-list.pug
@@ -19,9 +19,10 @@ block content
               i.fas.fa-star
             span.badge.badge-pill.badge-default.float-right 100m
           p.address 125 High Street, Reading, RG6 1PS
-          .facilities
+          p.facilities
             span.badge.badge-warning Hot drinks
             span.badge.badge-warning Food
             span.badge.badge-warning Premium wifi
     .col-12.col-md-4
-      p.lead Loc8r helps find places to work when out and about.
+      p.lead Loc8r helps find places to work when out and about. Loc8r helps you find places to work when out and about.
+
