--- a/app_server/views/location-info.pug
+++ b/app_server/views/location-info.pug
@@ -7,34 +7,34 @@ block content
   .row
     .col-12.col-lg-9
       .row
-        p.rating
-          i.fas.fa-star
-          i.fas.fa-star
-          i.fas.fa-star
-          i.fas.fa-star
-          i.fas.fa-star
-        p 125 High STreet, Reading, RG6 1 PS
-      .row.final
-        .card.card-primary
-          .card-block
-            h2.card-title Opening hours
-            p.card-text Monday - Friday: 7:00am - 7:00pm
-            p.card-text Saturday: 8:00am - 5:00pm
-            p.card-text Sunday: Closed
-        .card.card-primary
-          .card-block
-            h2.card-title Facilities
-            span.badge.badge-warning
-              i.fa.fa-check
-              | &nbsp; Hot drinks
-            | &nbsp;
-            span.badge.badge-warning
-              i.fa.fa-check
-              | &nbsp;Food
+        .col-12.col-md-6
+          p.rating
+            i.fas.fa-star
+            i.fas.fa-star
+            i.fas.fa-star
+            i.far.fa-star
+            i.far.fa-star
+          p 125 High Street, Reading, RG6 1PS
+          .card.card-primary
+            .card-block
+              h2.card-title Opening hours
+              p.card-text Monday - Friday : 7:00am - 7:00pm
+              p.card-text Saturday : 8:00am - 5:00pm
+              p.card-text Sunday : closed
+          .card.card-primary
+            .card-block
+              h2.card-title Facilities
+              span.badge.badge-warning
+                i.fa.fa-check
+                | &nbsp;Hot drinks
               | &nbsp;
               span.badge.badge-warning
                 i.fa.fa-check
-                | &nbsp; Premium wifi
+                | &nbsp;Food
+              | &nbsp;
+              span.badge.badge-warning
+                i.fa.fa-check
+                | &nbsp;Premium wifi
               | &nbsp;
         .col-12.col-md-6.location-map
           .card.card-primary
@@ -52,14 +52,27 @@ block content
                     i.fas.fa-star
                     i.fas.fa-star
                     i.fas.fa-star
-                    i.fas.fa-star
-                    i.fas.fa-star
-                  span.review Author Kweku John
-                  small.review Timestamp 16 February 2018
+                    i.far.fa-star
+                    i.far.fa-star
+                  span.reviewAuthor Simon Holmes
+                  small.reviewTimestamp 16 February 2017
                 .col-12
                   p What a great place.
-  .col-12.col-lg-3
-    p.lead
-      | Starcups is on Loc8r because it has accessible wifi and space to sit down with your laptop and get some work done.
-    p
-      | If you've been at Starcups and you like it - or if you don't - please leave a review to help other people just like you.
+              .row.review
+                .col-12.no-gutters.review-header
+                  span.rating
+                    i.fas.fa-star
+                    i.fas.fa-star
+                    i.fas.fa-star
+                    i.far.fa-star
+                    i.far.fa-star
+                  span.reviewAuthor Charlie Chaplin
+                  small.reviewTimestamp 14 February 2017
+                .col-12
+                  p It was okay. Coffee wasn't great.
+    .col-12.col-lg-3
+      p.lead
+        | Starcups is on Loc8r because it has accessible wifi and space to sit down with your laptop and get some work done.
+      p
+        | If you've been and you like it - or if you don't - please leave a review to help other people just like you.
+
