Completed the MVC architecture on the about page.

--- a/app_server/views/generic-text.pug
+++ b/app_server/views/generic-text.pug
@@ -6,5 +6,4 @@ block content
       h1=title
   .row
     .col-12.col-lg-8
-      p
-        | Lorem ipsum dolor sit amen.
+      p !{(content).replace(/\n/g, '<br/>')}
